
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_14__ TYPE_7__ ;
typedef struct TYPE_13__ TYPE_6__ ;
typedef struct TYPE_12__ TYPE_5__ ;
typedef struct TYPE_11__ TYPE_4__ ;
typedef struct TYPE_10__ TYPE_3__ ;
typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct TYPE_11__ {void* length; void* dport; void* sport; } ;
typedef TYPE_4__ udphdr_t ;
typedef int u_int16_t ;
typedef int u_char ;
struct TYPE_10__ {int s_addr; } ;
struct TYPE_8__ {int s_addr; } ;
struct TYPE_12__ {int version; int ihl; int ttl; int check; void* tot_len; TYPE_3__ daddr; TYPE_1__ saddr; int protocol; } ;
typedef TYPE_5__ iphdr_t ;
struct TYPE_14__ {unsigned char target_addr; unsigned int leakme; int verbose; } ;
struct TYPE_9__ {unsigned char s_addr; } ;
struct TYPE_13__ {TYPE_2__ ip; } ;


 int IPPROTO_UDP ;
 unsigned int IP_ADDR_LEN ;
 unsigned int LOCALPORT ;
 TYPE_7__ cfg ;
 int chksum (int *,int) ;
 int hexdump (unsigned char*,unsigned int) ;
 void* htons (unsigned int) ;
 int memcpy (int *,unsigned char*,unsigned int) ;
 TYPE_6__ packet_ifconfig ;
 unsigned char* smalloc (unsigned int) ;

unsigned char *UDPecho(
unsigned int *plen,
unsigned char *payload,
unsigned int payload_len
) {
unsigned char *pack;
iphdr_t *ip;
udphdr_t *udp;
u_char *pay;
u_char *t;
u_int16_t cs;

*plen=sizeof(iphdr_t)+sizeof(udphdr_t)+payload_len;
pack=smalloc(*plen+10);

ip=(iphdr_t *)pack;
ip->version=4;
ip->ihl=sizeof(iphdr_t)/4;
ip->ttl=0x80;
ip->protocol=IPPROTO_UDP;
memcpy(&(ip->saddr.s_addr),&(packet_ifconfig.ip.s_addr),IP_ADDR_LEN);
memcpy(&(ip->daddr.s_addr),&(cfg.target_addr),IP_ADDR_LEN);

udp=(udphdr_t *)((void *)ip+sizeof(iphdr_t));
udp->sport=htons(LOCALPORT);
udp->dport=htons(7);
udp->length=htons(cfg.leakme);

pay=(u_char *)((void *)udp+sizeof(udphdr_t));
t=pay;
memcpy(pay,payload,payload_len);
t+=payload_len;

ip->tot_len=htons(*plen);
cs=chksum((u_char *)ip,sizeof(iphdr_t));
ip->check=cs;

if (cfg.verbose>1) hexdump(pack,*plen);
return pack;
}
